--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
     <nav>
-        <a href="/index.html"><span>WEB</span>STUDIO</a>
+        <a href="./index.html">WEBSTUDIO</a>
         <ul>
             <li><a href="">Studio</a></li>
             <li><a href="">Portfolio</a></li>
@@ -18,8 +18,10 @@
     </nav>
 
     <ul>
-        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a href="+110001111111">+11 (000) 111-11-11</a></li>
+        <address>
+            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+            <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+        </address>
     </ul>
     </header>
 
@@ -97,7 +99,7 @@
     </main>
 
     <footer>
-        <a href="/index.html"><span>WEB</span>STUDIO</a>
+        <a href="./index.html">WEBSTUDIO</a>
         <p>Increase the flow of customers and
             sales for your business with digital
             marketing & growth solutions.
