--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
     <nav>
-        <a href="./index.html">WEBSTUDIO</a>
+        <a href="./index.html">WebStudio</a>
         <ul>
             <li><a href="">Studio</a></li>
             <li><a href="">Portfolio</a></li>
@@ -64,9 +64,9 @@
         <section>
             <h2>What are we doing</h2>
             <ul>
-                <li><img src="./img/macpic.jpg" alt="Desktop Computer image" width="360" height="300"></li>
-                <li><img src="./img/mobapppic.jpg" alt="Mobile App image" width="360" height="300"></li>
-                <li><img src="./img/lapmobpic.jpg" alt="Laptop and phone image" width="360" height="300"></li>
+                <li><img src="./images/macpic.jpg" alt="Desktop Computer image" width="360" height="300"></li>
+                <li><img src="./images/mobapppic.jpg" alt="Mobile App image" width="360" height="300"></li>
+                <li><img src="./images/lapmobpic.jpg" alt="Laptop and phone image" width="360" height="300"></li>
             </ul>
         </section>
 
@@ -74,22 +74,22 @@
             <h2>Our Team</h2>
           <ul>
             <li>
-                <img src="./img/mark_guerrero.jpg" alt="Mark Guerrero" width="264" height="260">
+                <img src="./images/mark_guerrero.jpg" alt="Mark Guerrero" width="264" height="260">
                 <h3>Mark Guerrero</h3>
                 <p>Product Designer</p>
             </li>
             <li>
-                <img src="./img/tom_ford.jpg" alt="Tom Ford" width="264" height="260">
+                <img src="./images/tom_ford.jpg" alt="Tom Ford" width="264" height="260">
                 <h3>Tom Ford</h3>
                 <p>Frontend Developer</p>
             </li>
             <li>
-                <img src="./img/camila_garcia.jpg" alt="Camila Garcia" width="264" height="260">
+                <img src="./images/camila_garcia.jpg" alt="Camila Garcia" width="264" height="260">
                 <h3>Camila Garcia</h3>
                 <p>Marketing</p>
             </li>
             <li>
-                <img src="./img/daniel_wilson.jpg" alt="Daniel Wilson" width="264" height="260">
+                <img src="./images/daniel_wilson.jpg" alt="Daniel Wilson" width="264" height="260">
                 <h3>Daniel Wilson</h3>
                 <p>UI Designer</p>
             </li>
@@ -98,7 +98,7 @@
     </main>
 
     <footer>
-        <a href="./index.html">WEBSTUDIO</a>
+        <a href="./index.html">WebStudio</a>
         <p>Increase the flow of customers and
             sales for your business with digital
             marketing & growth solutions.
